--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+
+}
 
  .alert {
   padding: 20px;
@@ -21,4 +26,64 @@
 /* When moving the mouse over the close button */
 .closebtn:hover {
   color: black;
+}
+
+/* LOGO */
+.logo {
+  position: relative;
+  width: 250px;
+  margin-left: 80%;
+  right: 10px;
+  top: -10px;
+
+}
+
+.headerinfo {
+  text-align: left;
+  font-family: 'Open Sans';
+  font-weight: bolder;
+}
+
+
+.headerinfo a {
+  text-decoration: none;
+  color: black;
+  vertical-align: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  padding: 20px;
+  margin-left: 20px;
+
+}
+
+li a:hover:not(.active) {
+  color: #1fa136;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+.active {
+  color:  #1fa136;
+}
+
+#greyscreen {
+  background-color: #eeeeee;
+  width: 100%;
+  height: 80px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 26px;
+  align-content: center;
+}
+
+.path {
+  text-align: right;
+  width: 100%;
 }
